--- a/limbo/affiliate/templates/blog/camera_15k/camera-15k.html
+++ b/limbo/affiliate/templates/blog/camera_15k/camera-15k.html
@@ -39,10 +39,17 @@
             <li>Battery : 5020 mAh</li>
             <li>Storage : 64GB</li>
             <li>Processor : Qualcomm Snapdragon 720G</li>
-            <div class="aff-link">
-              <a href="https://www.flipkart.com/poco-m2-pro-green-greener-64-gb/p/itm795e36b373b6f?pid=MOBFT7MK3Q89BGWR&lid=LSTMOBFT7MK3Q89BGWRP2OFTB&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=116b78d4-dd80-4fd7-9e10-59b78efc73d1.MOBFT7MK3Q89BGWR.SEARCH&ppt=sp&ppn=sp&ssid=ewuaih53j40000001594877214958&qH=b83349d0f5338c62" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from flipkart</button></a>
-              <a href="flipkart.com/search?q=poco%20m2%20pro&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+
+            <div class="aff-link1">
+              <form action="https://www.flipkart.com/poco-m2-pro-green-greener-64-gb/p/itm795e36b373b6f?pid=MOBFT7MK3Q89BGWR&lid=LSTMOBFT7MK3Q89BGWRP2OFTB&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=116b78d4-dd80-4fd7-9e10-59b78efc73d1.MOBFT7MK3Q89BGWR.SEARCH&ppt=sp&ppn=sp&ssid=ewuaih53j40000001594877214958&qH=b83349d0f5338c62">
+                <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
+              </form>
+              <form action="https://www.flipkart.com/search?q=poco%20m2%20pro&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off">
+                <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+              </form>
             </div>
+
+
           </ul>
         </div>
         <!-- 2 -->
@@ -63,10 +70,17 @@
             <li>Storage : 64GB</li>
             <li>Processor: MediaTek Helio G80</li>
             <li>battery : 5000 mAh </li>
-            <div class="aff-link">
-              <a href="https://www.flipkart.com/realme-narzo-10-that-green-128-gb/p/itmfaa990ac54b7a?pid=MOBFQ36AGTW8HNMW&lid=LSTMOBFQ36AGTW8HNMWFLXHAY&marketplace=FLIPKART&srno=s_1_1&otracker=AS_QueryStore_OrganicAutoSuggest_1_8_na_na_ps&otracker1=AS_QueryStore_OrganicAutoSuggest_1_8_na_na_ps&fm=SEARCH&iid=46e6c01b-009e-4d0e-a92f-71a22d3f3547.MOBFQ36AGTW8HNMW.SEARCH&ppt=sp&ppn=sp&ssid=84zojah5cg0000001594877362612&qH=456ef728a14ea6c7" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from flipkart</button></a>
-              <a href="https://www.flipkart.com/realme-narzo-10-that-green-128-gb/p/itmfaa990ac54b7a?pid=MOBFQ36AGTW8HNMW&lid=LSTMOBFQ36AGTW8HNMWFLXHAY&marketplace=FLIPKART&srno=s_1_1&otracker=AS_QueryStore_OrganicAutoSuggest_1_8_na_na_ps&otracker1=AS_QueryStore_OrganicAutoSuggest_1_8_na_na_ps&fm=SEARCH&iid=46e6c01b-009e-4d0e-a92f-71a22d3f3547.MOBFQ36AGTW8HNMW.SEARCH&ppt=sp&ppn=sp&ssid=84zojah5cg0000001594877362612&qH=456ef728a14ea6c7" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+
+            <div class="aff-link1">
+              <form action="https://www.flipkart.com/realme-narzo-10-that-green-128-gb/p/itmfaa990ac54b7a?pid=MOBFQ36AGTW8HNMW&lid=LSTMOBFQ36AGTW8HNMWFLXHAY&marketplace=FLIPKART&srno=s_1_1&otracker=AS_QueryStore_OrganicAutoSuggest_1_8_na_na_ps&otracker1=AS_QueryStore_OrganicAutoSuggest_1_8_na_na_ps&fm=SEARCH&iid=46e6c01b-009e-4d0e-a92f-71a22d3f3547.MOBFQ36AGTW8HNMW.SEARCH&ppt=sp&ppn=sp&ssid=84zojah5cg0000001594877362612&qH=456ef728a14ea6c7">
+                <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
+              </form>
+              <form action="https://www.flipkart.com/realme-narzo-10-that-green-128-gb/p/itmfaa990ac54b7a?pid=MOBFQ36AGTW8HNMW&lid=LSTMOBFQ36AGTW8HNMWFLXHAY&marketplace=FLIPKART&srno=s_1_1&otracker=AS_QueryStore_OrganicAutoSuggest_1_8_na_na_ps&otracker1=AS_QueryStore_OrganicAutoSuggest_1_8_na_na_ps&fm=SEARCH&iid=46e6c01b-009e-4d0e-a92f-71a22d3f3547.MOBFQ36AGTW8HNMW.SEARCH&ppt=sp&ppn=sp&ssid=84zojah5cg0000001594877362612&qH=456ef728a14ea6c7">
+                <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+              </form>
             </div>
+
+
           </ul>
         </div>
         <!-- 3 -->
@@ -87,10 +101,17 @@
             <li>Storage : 64GB</li>
             <li>Processor: Qualcomm Snapdragon 720G</li>
             <li>battery : 5020 mAh </li>
-            <div class="aff-link">
-              <a href="https://www.amazon.in/Test-Exclusive-549/dp/B077PWBC78/ref=sr_1_1?crid=1D86KJPUKQVBX&dchild=1&keywords=redmi+note+9+pro&qid=1594877493&sprefix=readi+note+9+p%2Caps%2C538&sr=8-1" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-              <a href="https://www.amazon.in/s?k=readi+note+9+pro&crid=1D86KJPUKQVBX&sprefix=readi+note+9+p%2Caps%2C538&ref=nb_sb_ss_ts-o-p_1_14" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+
+            <div class="aff-link1">
+              <form action="https://www.amazon.in/Test-Exclusive-549/dp/B077PWBC78/ref=sr_1_1?crid=1D86KJPUKQVBX&dchild=1&keywords=redmi+note+9+pro&qid=1594877493&sprefix=readi+note+9+p%2Caps%2C538&sr=8-1">
+                <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+              </form>
+              <form action="https://www.amazon.in/s?k=readi+note+9+pro&crid=1D86KJPUKQVBX&sprefix=readi+note+9+p%2Caps%2C538&ref=nb_sb_ss_ts-o-p_1_14">
+                <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+              </form>
             </div>
+
+
           </ul>
         </div>
         <!-- 4 -->
@@ -111,10 +132,17 @@
             <li>Storage : 64GB</li>
             <li>Processor: MediaTek Helio G90T</li>
             <li>battery : 4300 mAh </li>
-            <div class="aff-link">
-              <a href="https://www.flipkart.com/realme-6-comet-blue-128-gb/p/itm50e6d62dcf5ee?pid=MOBFPCX72FYWY7NF&lid=LSTMOBFPCX72FYWY7NFMSGQ1L&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=d626afc3-1acd-4a9e-b99d-08b9e40621ef.MOBFPCX72FYWY7NF.SEARCH&ppt=sp&ppn=sp&ssid=dcdyx65veo0000001594877507024&qH=2d8725b012f49fbf" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from flipkart</button></a>
-              <a href="https://www.flipkart.com/search?q=%20Realme%206%20&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+
+            <div class="aff-link1">
+              <form action="https://www.flipkart.com/realme-6-comet-blue-128-gb/p/itm50e6d62dcf5ee?pid=MOBFPCX72FYWY7NF&lid=LSTMOBFPCX72FYWY7NFMSGQ1L&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=d626afc3-1acd-4a9e-b99d-08b9e40621ef.MOBFPCX72FYWY7NF.SEARCH&ppt=sp&ppn=sp&ssid=dcdyx65veo0000001594877507024&qH=2d8725b012f49fbf">
+                <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
+              </form>
+              <form action="https://www.flipkart.com/search?q=%20Realme%206%20&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off">
+                <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+              </form>
             </div>
+
+
           </ul>
         </div>
         <!-- 5 -->
@@ -135,10 +163,16 @@
             <li>Storage : 64GB</li>
             <li>Processor: Qualcomm Snapdragon 730G</li>
             <li>battery : 4500 mAh </li>
-            <div class="aff-link">
-              <a href="https://www.flipkart.com/poco-x2-phoenix-red-64-gb/p/itmda7dd1f37ffff?pid=MOBFZGJ6Q9A5FHRC&lid=LSTMOBFZGJ6Q9A5FHRCENQ0C3&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=0aaa5110-3c94-425c-b6a5-1c61bf21fd5e.MOBFZGJ6Q9A5FHRC.SEARCH&ppt=sp&ppn=sp&ssid=wt92tb7hjk0000001594877583665&qH=9b170a335b7c1e38" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-              <a href="https://www.flipkart.com/search?q=%20Poco%20X2&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+            <div class="aff-link1">
+              <form action="https://www.flipkart.com/poco-x2-phoenix-red-64-gb/p/itmda7dd1f37ffff?pid=MOBFZGJ6Q9A5FHRC&lid=LSTMOBFZGJ6Q9A5FHRCENQ0C3&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=0aaa5110-3c94-425c-b6a5-1c61bf21fd5e.MOBFZGJ6Q9A5FHRC.SEARCH&ppt=sp&ppn=sp&ssid=wt92tb7hjk0000001594877583665&qH=9b170a335b7c1e38">
+                <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
+              </form>
+              <form action="https://www.flipkart.com/search?q=%20Poco%20X2&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off" class="affilated-link_flipcart">
+                <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+              </form>
             </div>
+
+
           </ul>
         </div>
       </div>
