--- a/limbo/affiliate/templates/page/bas.html
+++ b/limbo/affiliate/templates/page/bas.html
@@ -67,11 +67,14 @@
     span{
       color: red;
     }
-    .aff-link button{
+    .aff-link1{
+      display: flex;
+    }
+    .aff-link1 button{
       width: 300px;
       margin-left: 30px;
     }
-    .aff-link{
+    .aff-link1{
       margin-top: 20px;
     }
     .headline{
@@ -192,10 +195,13 @@
         #srh button{
           margin-left: 2px;
         }
-        .aff-link button{
+        .aff-link1 button{
           width: 90%;
           margin-left: 0;
           margin-top: 10px;
+        }
+        .aff-link1{
+          flex-direction: column;
         }
         .affilated-link_flipcart{
           margin-left: 0;
