--- a/limbo/affiliate/templates/page/search.html
+++ b/limbo/affiliate/templates/page/search.html
@@ -317,7 +317,7 @@
         </aside>
       </div>
     </section>
-    
+
     <section>
       <div class="blogs">
         <div class="blog-posts ">
@@ -327,7 +327,7 @@
                 <img class="img-article" src="{% static 'image/mobile/pubg/PUBG-mobile.jpg'%}" alt="">
               </div>
               <div class="post-info">
-                <h3 style="color:gray;">Best PUBG mobile between under 10,000-20,000INR</h3>
+                <h3 style="color:gray;">Best PUBG mobile between 10,000-20,000-INR</h3>
                 <p style="color:gray;">PUBG is an online multiplayer battle royale game developed and published by PUBG Corporation, a subsidiary of South Korean video game company Bluehole. Now a day world most popular mobile game is PUBG, top 10 mobiles list are give below which can easily support PUBG without any lag.</p><p></p><br>
                 <div class="badge">
                   <a class="read-more" href="#">Read more</a>
