--- a/limbo/affiliate/templates/blog/pubg_mobile/pubg.html
+++ b/limbo/affiliate/templates/blog/pubg_mobile/pubg.html
@@ -49,9 +49,14 @@
             <li>Storage: 6GB RAM + 128GB Storage, 8GB RAM + 256GB</li>
             <li>Non-removable Li-Po 4000 mAh battery</li>
             <li>Fast charging 18W</li>
-            <div class="aff-link">
-              <a href="https://www.flipkart.com/poco-f1-armoured-edition-128-gb/p/itmfbyd6nzexrpgk?pid=MOBFBYD6HGFZUNKS&lid=LSTMOBFBYD6HGFZUNKSHYEIGK&marketplace=FLIPKART&sattr[]=color&sattr[]=storage&sattr[]=ram&st=storage&otracker=AS_QueryStore_OrganicAutoSuggest_1_7_na_na_na" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from flipkart</button></a>
-              <a href="https://www.flipkart.com/search?q=poco+f1&sid=tyy%2C4io&as=on&as-show=on&otracker=AS_QueryStore_OrganicAutoSuggest_1_7_na_na_na&otracker1=AS_QueryStore_OrganicAutoSuggest_1_7_na_na_na&as-pos=1&as-type=HISTORY&suggestionId=poco+f1%7CMobiles&requestId=5fd78d63-dd7a-41e2-b069-cb51278fe7a0" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+
+            <div class="aff-link1">
+              <form action="https://www.flipkart.com/poco-f1-armoured-edition-128-gb/p/itmfbyd6nzexrpgk?pid=MOBFBYD6HGFZUNKS&lid=LSTMOBFBYD6HGFZUNKSHYEIGK&marketplace=FLIPKART&sattr[]=color&sattr[]=storage&sattr[]=ram&st=storage&otracker=AS_QueryStore_OrganicAutoSuggest_1_7_na_na_na">
+                <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+              </form>
+              <form action="https://www.flipkart.com/search?q=poco+f1&sid=tyy%2C4io&as=on&as-show=on&otracker=AS_QueryStore_OrganicAutoSuggest_1_7_na_na_na&otracker1=AS_QueryStore_OrganicAutoSuggest_1_7_na_na_na&as-pos=1&as-type=HISTORY&suggestionId=poco+f1%7CMobiles&requestId=5fd78d63-dd7a-41e2-b069-cb51278fe7a0">
+                <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+              </form>
             </div>
           </ul>
         </div>
@@ -75,10 +80,16 @@
             <li>RAM + storage: 64GB 4GB RAM, 128GB 4GB RAM, 128GB 6GB RAM, 128GB 8GB RAM</li>
             <li>Battery:  Non-removable Li-Po 4300 mAh battery</li>
             <li>Fast charging 30W, 100% in 55 min.</li>
-            <div class="aff-link">
-              <a href="https://www.amazon.in/Realme-Comet-White-128-RAM/dp/B07Z6GQRS7/ref=sr_1_4?crid=2IB5A2G5AQ5AV&dchild=1&keywords=realme+6&qid=1594823843&sprefix=Rea%2Caps%2C382&sr=8-4" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-              <a href="https://www.amazon.in/Realme-Comet-White-128-RAM/dp/B07Z6GQRS7/ref=sr_1_4?crid=2IB5A2G5AQ5AV&dchild=1&keywords=realme+6&qid=1594823843&sprefix=Rea%2Caps%2C382&sr=8-4" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+
+            <div class="aff-link1">
+              <form action="https://www.amazon.in/Realme-Comet-White-128-RAM/dp/B07Z6GQRS7/ref=sr_1_4?crid=2IB5A2G5AQ5AV&dchild=1&keywords=realme+6&qid=1594823843&sprefix=Rea%2Caps%2C382&sr=8-4">
+                <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+              </form>
+              <form action="https://www.amazon.in/Realme-Comet-White-128-RAM/dp/B07Z6GQRS7/ref=sr_1_4?crid=2IB5A2G5AQ5AV&dchild=1&keywords=realme+6&qid=1594823843&sprefix=Rea%2Caps%2C382&sr=8-4">
+                <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+              </form>
             </div>
+
           </ul>
         </div>
         <!-- 3 -->
@@ -101,10 +112,17 @@
             <li>RAM + storage: 64GB 4GB RAM, 128GB 6GB RAM</li>
             <li>Battery:  Non-removable Li-Po 5020mAh battery</li>
             <li>Fast charging 18W</li>
-            <div class="aff-link">
-              <a href="https://www.amazon.in/Test-Exclusive-549/dp/B077PWBC78/ref=sr_1_1?dchild=1&keywords=redmi+note+9+pro&qid=1594824014&sr=8-1" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-              <a href="https://www.amazon.in/s?k=redmi+note+9+pro&ref=nb_sb_noss_2" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+
+            <div class="aff-link1">
+              <form action="https://www.amazon.in/Test-Exclusive-549/dp/B077PWBC78/ref=sr_1_1?dchild=1&keywords=redmi+note+9+pro&qid=1594824014&sr=8-1">
+                <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+              </form>
+              <form action="https://www.amazon.in/s?k=redmi+note+9+pro&ref=nb_sb_noss_2">
+                <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+              </form>
             </div>
+
+
           </ul>
         </div>
         <!-- 4 -->
@@ -127,10 +145,17 @@
             <li>64GB 4GB RAM, 64GB 6GB RAM, 128GB 6GB RAM</li>
             <li>Battery:  Non-removable Li-Po 4000mAh battery</li>
             <li>Fast charging 18W</li>
-            <div class="aff-link">
-              <a href="https://www.amazon.in/Note-Pro-Space-Black-64GB/dp/B07VWXLRRH/ref=sr_1_1?dchild=1&keywords=redmi+note+7+pro&qid=1594823945&sr=8-1" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-              <a href="https://www.amazon.in/Note-Pro-Space-Black-64GB/dp/B07VWXLRRH/ref=sr_1_1?dchild=1&keywords=redmi+note+7+pro&qid=1594823945&sr=8-1" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+
+            <div class="aff-link1">
+              <form action="https://www.amazon.in/Note-Pro-Space-Black-64GB/dp/B07VWXLRRH/ref=sr_1_1?dchild=1&keywords=redmi+note+7+pro&qid=1594823945&sr=8-1">
+                <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+              </form>
+              <form action="https://www.amazon.in/Note-Pro-Space-Black-64GB/dp/B07VWXLRRH/ref=sr_1_1?dchild=1&keywords=redmi+note+7+pro&qid=1594823945&sr=8-1">
+                <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+              </form>
             </div>
+
+
           </ul>
         </div>
         <!-- 5 -->
@@ -153,10 +178,17 @@
             <li>RAM+Storage:64GB 6GB RAM, 128GB 4GB RAM, 128GB 6GB RAM, 256GB 6GB RAM</li>
             <li>Battery: Non-removable Li-Po 4500 mAh battery</li>
             <li>Fast charging 18W</li>
-            <div class="aff-link">
-              <a href="https://www.amazon.in/Vivo-Diamond-Storage-Additional-Exchange/dp/B07X9YLSGS/ref=sr_1_2?crid=33MGXHEW3M52S&dchild=1&keywords=vivo+s1+mobile&qid=1594824067&sprefix=vivo+s1%2Caps%2C482&sr=8-2" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-              <a href="https://www.amazon.in/Vivo-Diamond-Storage-Additional-Exchange/dp/B07X9YLSGS/ref=sr_1_2?crid=33MGXHEW3M52S&dchild=1&keywords=vivo+s1+mobile&qid=1594824067&sprefix=vivo+s1%2Caps%2C482&sr=8-2" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+
+            <div class="aff-link1">
+              <form action="https://www.amazon.in/Vivo-Diamond-Storage-Additional-Exchange/dp/B07X9YLSGS/ref=sr_1_2?crid=33MGXHEW3M52S&dchild=1&keywords=vivo+s1+mobile&qid=1594824067&sprefix=vivo+s1%2Caps%2C482&sr=8-2">
+                <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+              </form>
+              <form action="https://www.amazon.in/Vivo-Diamond-Storage-Additional-Exchange/dp/B07X9YLSGS/ref=sr_1_2?crid=33MGXHEW3M52S&dchild=1&keywords=vivo+s1+mobile&qid=1594824067&sprefix=vivo+s1%2Caps%2C482&sr=8-2">
+                <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+              </form>
             </div>
+
+
           </ul>
         </div>
         <!-- 6 -->
@@ -179,10 +211,15 @@
             <li>Storage: 64 GB or 128 GB UFS 2.1 internal storage + dedicated microSD slot</li>
             <li>Battery: Non-removable Li-Ion 4500 mAh battery</li>
             <li>Fast charging 18W</li>
-            <div class="aff-link">
-              <a href="https://www.amazon.in/Redmi-Note-Pro-Storage-Processor/dp/B07X4PKGSN/ref=sr_1_1?crid=1APT739K268VB&dchild=1&keywords=note+8+pro+redmi&qid=1594824123&sprefix=note+%2Caps%2C451&sr=8-1" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-              <a href="https://www.amazon.in/s?k=note+8+pro+redmi&crid=1APT739K268VB&sprefix=note+%2Caps%2C451&ref=nb_sb_ss_ts-o-p_1_5" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+            <div class="aff-link1">
+              <form action="https://www.amazon.in/Redmi-Note-Pro-Storage-Processor/dp/B07X4PKGSN/ref=sr_1_1?crid=1APT739K268VB&dchild=1&keywords=note+8+pro+redmi&qid=1594824123&sprefix=note+%2Caps%2C451&sr=8-1">
+                <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+              </form>
+              <form action="https://www.amazon.in/s?k=note+8+pro+redmi&crid=1APT739K268VB&sprefix=note+%2Caps%2C451&ref=nb_sb_ss_ts-o-p_1_5">
+                <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+              </form>
             </div>
+
           </ul>
         </div>
         <!-- 7 -->
@@ -205,10 +242,17 @@
             <li>Storage: 64 GB or 128 GB </li>
             <li>Battery: Non-removable Li-Po 4035 mAh battery</li>
             <li>Fast charging 20W, 50% in 30 min</li>
-            <div class="aff-link">
-              <a href="https://www.flipkart.com/realme-5-pro-sparkling-blue-128-gb/p/itmfj9twdugyvg77?pid=MOBFJ9TWAEBGAYFR&lid=LSTMOBFJ9TWAEBGAYFRGDVJVR&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=d44a9a8c-a2f2-415f-9ee6-3c6d29e58c57.MOBFJ9TWAEBGAYFR.SEARCH&ppt=sp&ppn=sp&ssid=wb9h0xta680000001594824150931&qH=0e144ab94d3ed3b7" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from flipkart</button></a>
-              <a href="https://www.flipkart.com/search?q=realme%205%20pro&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
+
+            <div class="aff-link1">
+              <form action="https://www.flipkart.com/realme-5-pro-sparkling-blue-128-gb/p/itmfj9twdugyvg77?pid=MOBFJ9TWAEBGAYFR&lid=LSTMOBFJ9TWAEBGAYFRGDVJVR&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=d44a9a8c-a2f2-415f-9ee6-3c6d29e58c57.MOBFJ9TWAEBGAYFR.SEARCH&ppt=sp&ppn=sp&ssid=wb9h0xta680000001594824150931&qH=0e144ab94d3ed3b">
+                <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
+              </form>
+              <form action="https://www.flipkart.com/search?q=realme%205%20pro&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off" class="affilated-link_flipcart">
+                <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+              </form>
             </div>
+
+
           </ul>
         </div>
         <!-- 8 -->
@@ -235,6 +279,17 @@
               <a href="https://www.amazon.in/Test-Exclusive-631/dp/B07HGJ7WM6/ref=sr_1_1?dchild=1&keywords=samsung+m30s&qid=1594824299&sr=8-1" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
               <a href="https://www.amazon.in/Test-Exclusive-631/dp/B07HGJ7WM6/ref=sr_1_1?dchild=1&keywords=samsung+m30s&qid=1594824299&sr=8-1" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
             </div>
+
+            <div class="aff-link1">
+              <form action="https://www.amazon.in/Test-Exclusive-543/dp/B078BN2H3R/ref=sr_1_2?dchild=1&keywords=oneplus+8+pro&qid=1594894179&sr=8-2">
+                <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+              </form>
+              <form action="https://www.amazon.in/Test-Exclusive-543/dp/B078BN2H3R/ref=sr_1_2?dchild=1&keywords=oneplus+8+pro&qid=1594894179&sr=8-2">
+                <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+              </form>
+            </div>
+
+
           </ul>
         </div>
         <!-- 9 -->
@@ -261,6 +316,17 @@
               <a href="https://www.flipkart.com/vivo-z1pro-sonic-black-128-gb/p/itmfghyebfrvjzfs?pid=MOBFHHT529KQHT8Z&lid=LSTMOBFHHT529KQHT8Z7WZJL1&marketplace=FLIPKART&srno=s_1_1&otracker=AS_QueryStore_OrganicAutoSuggest_1_7_na_na_ps&otracker1=AS_QueryStore_OrganicAutoSuggest_1_7_na_na_ps&fm=SEARCH&iid=fb2e6925-1432-4665-b9e8-07538e6472e7.MOBFHHT529KQHT8Z.SEARCH&ppt=sp&ppn=sp&ssid=o9q9j5ucow0000001594824303759&qH=bf26cb0d32c2e6ac" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from flipkart</button></a>
               <a href="https://www.flipkart.com/search?q=vivo+z1+pro&sid=tyy%2C4io&as=on&as-show=on&otracker=AS_QueryStore_OrganicAutoSuggest_1_7_na_na_ps&otracker1=AS_QueryStore_OrganicAutoSuggest_1_7_na_na_ps&as-pos=1&as-type=RECENT&suggestionId=vivo+z1+pro%7CMobiles&requestId=151a69e9-a41c-46f7-82fb-590d752974a9&as-searchtext=vivo%20z1" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
             </div>
+
+            <div class="aff-link1">
+              <form action="https://www.amazon.in/Test-Exclusive-543/dp/B078BN2H3R/ref=sr_1_2?dchild=1&keywords=oneplus+8+pro&qid=1594894179&sr=8-2">
+                <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+              </form>
+              <form action="https://www.amazon.in/Test-Exclusive-543/dp/B078BN2H3R/ref=sr_1_2?dchild=1&keywords=oneplus+8+pro&qid=1594894179&sr=8-2">
+                <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+              </form>
+            </div>
+
+
           </ul>
         </div>
         <!-- 10 -->
@@ -286,6 +352,17 @@
               <a href="https://www.flipkart.com/realme-5s-crystal-red-128-gb/p/itm592977b0ba210?pid=MOBFM2WZWVBK2KRX&lid=LSTMOBFM2WZWVBK2KRXGGPJHY&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=bd0a85f0-7ae7-403d-b843-b27b8a69fac1.MOBFM2WZWVBK2KRX.SEARCH&ppt=sp&ppn=sp&ssid=09npbl8p1c0000001594824400685&qH=6841e7f327cfede0" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from flipkart</button></a>
               <a href="https://www.flipkart.com/realme-5s-crystal-red-128-gb/p/itm592977b0ba210?pid=MOBFM2WZWVBK2KRX&lid=LSTMOBFM2WZWVBK2KRXGGPJHY&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=bd0a85f0-7ae7-403d-b843-b27b8a69fac1.MOBFM2WZWVBK2KRX.SEARCH&ppt=sp&ppn=sp&ssid=09npbl8p1c0000001594824400685&qH=6841e7f327cfede0" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
             </div>
+
+            <div class="aff-link1">
+              <form action="https://www.amazon.in/Test-Exclusive-543/dp/B078BN2H3R/ref=sr_1_2?dchild=1&keywords=oneplus+8+pro&qid=1594894179&sr=8-2">
+                <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+              </form>
+              <form action="https://www.amazon.in/Test-Exclusive-543/dp/B078BN2H3R/ref=sr_1_2?dchild=1&keywords=oneplus+8+pro&qid=1594894179&sr=8-2">
+                <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+              </form>
+            </div>
+
+
           </ul>
         </div>
         <!-- 11 -->
