--- a/limbo/affiliate/templates/page/base.html
+++ b/limbo/affiliate/templates/page/base.html
@@ -8,19 +8,16 @@
     {% block key%} {% endblock key%}
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-      {% load static %}
+    {% load static %}
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-
-    <title>{% block title%} {% endblock title%}</title>
-  </head>
-  <body>
-    <style media="screen">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">\
+    {% block style %} {% endblock style %}
+    <style>
       body{
         margin: 0;
         padding: 0;
@@ -281,6 +278,9 @@
     .content_info p{
       margin-top: 20px;
     }
+    .aff-link1{
+      display: flex;
+    }
     button{
       width: 300px;
     }
@@ -538,6 +538,9 @@
         .content{
           height: 785px;
         }
+        .aff-link1{
+          flex-direction: column;
+        }
         .affilated-link_flipcart{
           margin-left:0;
         }
@@ -583,9 +586,12 @@
         }
       }
     </style>
+  <title>{% block title%} {% endblock title%}</title>
+  </head>
+  <body>
     <header>
       <div class="logo">
-        <img style="width: 250px; margin-left: -40px;"src="{% static 'image/logo/logo.png'%}" alt="">
+        <img style="width: 250px; margin-left: -40px;" src="{% static 'image/logo/logo.png'%}" alt="">
       </div>
       <div class="menu-toggle"></div>
       <nav>
@@ -627,7 +633,7 @@
       <!-- quicl links -->
       <div class="quick-link">
         <div class="link1 shadow">
-          <a class="row1"href="{% url 'pubg'%}">Best PUBG Mobile under <span>&#x20B9;</span>20,000</a>
+          <a class="row1" href="{% url 'pubg'%}">Best PUBG Mobile under <span>&#x20B9;</span>20,000</a>
         </div>
         <div class="link2 shadow">
           <a href="{% url 'mobile10k'%}">Best Mobile under <span>&#x20B9;</span>10000</a>
@@ -638,7 +644,7 @@
       </div>
       <div class="quick-link">
         <div class="link4 shadow">
-          <a class="row2"href="{% url 'battery'%}">Best Bettary Backup Mobile Phone</a>
+          <a class="row2" href="{% url 'battery'%}">Best Bettary Backup Mobile Phone</a>
         </div>
         <div class="link5 shadow">
           <a href="{% url 'camera15k'%}">Best camera phone under <span>&#x20B9;</span>15000</a>
@@ -658,7 +664,7 @@
     {% block content%}  {% endblock content%}
     <footer>
       <div class="footer_info">
-        <img style="width: 150px; margin-left: -13px;"src="{% static 'image/logo/logo.png'%}" alt="">
+        <img style="width: 150px; margin-left: -13px;" src="{% static 'image/logo/logo.png'%}" alt="">
         <p class="footer_about">Our Foremost motive is to serve you with correct product  review and price info. So, that this marketing arrangment can genearte you with honest purchases.</p>
         <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
         <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
@@ -684,7 +690,7 @@
       </div>
     </footer>
     <!-- script -->
-    <script type="text/javascript">
+    <script>
       $(document).ready(function() {
         $('.menu-toggle').click(function(){
           $('.menu-toggle').toggleClass('active')
@@ -693,7 +699,7 @@
       })
       </script>
       <!-- brand -->
-      <script type="text/javascript">
+      <script>
         $(document).ready(function() {
           $('.brand-menu-toggle').click(function(){
             $('.brand-menu-toggle').toggleClass('active')
